# deepISA

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  env_snapshot.txt  pyproject.toml  requirements.lock.txt  requirements.txt
config/: default_config.yaml
data/: TF_Cof_I.txt  TF_binding_coop_cleaned.csv  mini_jaspar.bb  model_blympho.pt  motif_locs.csv  regions_pos.bed  universal_stripe_factors.txt
notebooks/: deepISA_tutorial.ipynb  motif_filter_tutorial.ipynb
scripts/: run_single_isa.py
src/deepISA/: quickstart.py  utils.py
src/deepISA/data/: HTFs_with_JASPAR_Families.csv  JASPAR2026_CORE_non-redundant_pfms_jaspar.txt  TF_TF_I.txt  context_only_tfs.txt  hg38_TF_promoters_500bp.bed  pioneer_factors.txt  regions_pos_with_count.csv
src/deepISA/data/mini_data_chr1_1MB/: bg_1mb.bed  hg38_1mb.fa  regions_1mb.csv
src/deepISA/exploring/: tf_family.py  tf_function.py  tf_pair_ppi.py
src/deepISA/modeling/: cnn.py  data_loader.py  predict.py  preprocess.py  train.py  trainer.py
src/deepISA/motif_filter/: METHOD.md  __init__.py  run_filter.sh
src/deepISA/motif_filter/cli/: common_args.py  run_filter.py
src/deepISA/motif_filter/core/: __init__.py  attribution.py  scoring.py  threshold.py  window.py
src/deepISA/motif_filter/notebooks/: motif_filter_tutorial.ipynb
src/deepISA/motif_filter/pipeline/: api.py  filter_pipeline.py
src/deepISA/motif_filter/utils/: __init__.py  fasta.py  io.py  onehot.py
src/deepISA/plotting/: cooperativity.py  interaction.py  tf.py
src/deepISA/scoring/: annotation.py  combi_isa.py  filter.py  infer_tf_expr.py  mapper.py  single_isa.py
src/deepISA/utils/: __init__.py  config_loader.py  deepisa_guard.py  genome_setup.py
src/deepISA/validating/: tf_family.py  tf_function.py  tf_pair_ppi.py
tests/: test_annotation.py  test_cnn.py  test_combi_isa.py  test_cooperativity.py  test_heatmap_cooperativity.py  test_hist_interaction.py  test_infer_tf_expr.py  test_interaction.py  test_plot_cooperativity_vs_importance.py  test_plot_interaction_decay.py  test_plot_motif_gc_by_cooperativity.py  test_plotting_tf.py  test_ppi.py  test_preprocess.py  test_single_isa.py  test_tf_family.py  test_tf_function.py  test_train.py  test_trainer.py  test_util.py
tutorials/: motif_filter_tutorial.ipynb
