[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepISA"
version = "0.1.0"
description = "A unified Python framework for mapping transcription factor cooperativity using deep learning and in silico ablation."
authors = [
    {name = "Xuening He", email = "xuening.he@bio.ku.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
]

# Core dependencies based on your module requirements 
dependencies = [
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "loguru",                                    
    "tqdm",                        
    "scikit-learn",                
    "pyBigWig"
    "biopython>=1.80",
    "scipy",
    "matplotlib",
    "seaborn",
    "requests",
    "snakemake>=7.0.0",
    "streamlit>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",                # For the Phase 1/2 validation logic
    "black",                      # Code formatting
    "isort",                      # Import sorting
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
deepisa-cli = "deepisa.main:main"